--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aaaa",
+  "name": "SimpleList",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,9 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
-    "vue-template-compiler": "^2.6.11"
+    "better-scroll": "^1.15.2",
+    "hammerjs": "^2.0.8",
+    "vue-template-compiler": "^2.6.11",
+    "vue-touch": "^2.0.0-beta.4"
   }
 }
